[FEATURE] CB-1664 added support tool translations (it/ja)

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2208,6 +2208,9 @@
             "intro_title": "CryptoBridge Support",
             "intro_text":
                 "If you have an issue with a deposit or withdrawal please create ticket"
+        },
+        "benchmark": {
+            "title": "Benchmark"
         }
     }
 }
