--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -2191,6 +2191,75 @@
                 "НЕ СОГЛАШАЙТЕСЬ на предложения от неизвестных аккаунтов. Ваш аккаунт может быть украден если Вы примите мошенническое предложение.",
             "proposal_info":
                 "Если сомневаетесь, ничего не делайте и спросите совета в Discord %(discordLink)s"
+        },
+        "support": {
+            "title": "Техподдержка",
+            "all_tickets": "Все обращения",
+            "open": "Открыто",
+            "in_progress": "В работе",
+            "waiting_for_customer": "Ожидает ответа пользователя",
+            "waiting_for_support": "Ожидает ответа сотрудника",
+            "blocked": "Заблокировано",
+            "closed": "Закрыто",
+            "new_ticket": "Новое обращение",
+            "create_ticket": "Создать обращение",
+            "cancel": "Отменить",
+            "deposit": "Депозит",
+            "deposits": "Депозиты",
+            "withdrawal": "Вывод",
+            "withdrawals": "Выводы",
+            "other": "Другое",
+            "disabled_deposits_message":
+                "Депозиты в данный момент отключены по запросу разработчика монеты.",
+            "disabled_withdrawals_message":
+                "Выводы в данный момент отключены по запросу разработчика монеты.",
+            "format": "формат",
+            "reply": "Ответ",
+            "close_ticket": "Закрыть Обращение",
+            "support_intro_text":
+                "CryptoBridge теперь имеет интегрированную техподдержку - всё в одном месте. Чтобы воспользоваться необходимо залогиниться.",
+            "could_not_find_solution": "Я не вижу решения свой проблемы",
+            "new_ticket_intro1":
+                "Пожалуйста, не создавайте мжножество обращений для одной проблемы - это лишь замедлит решение Вашей проблемы.",
+            "new_ticket_intro2":
+                "Прежде чем создать обращение, пожалуйста, прочтите ЧАВО для поиска возможного решения Вашей проблемы:",
+            "coin_list_placeholder": "Выберите Вашу монету...",
+            "loading_coin_list": "Загрузка списка монет...",
+            "explorer_instructions":
+                "Прежде чем создать обращение, пожалуйста, проверьте свою транзакцию по обозревателю блокчейна:",
+            "not_see_transaction": "Я не вижу свою транзакцию",
+            "faq_search_placeholder": "Введите параметры поиска…",
+            "faq_search_aria_label": "Поискать в ЧАВО",
+            "comment_successfully_posted": "Ваш комментарий был добавлен",
+            "enter_your_reply": "Пожалуйста, введите Ваш ответ...",
+            "enter_your_message": "Пожалуйста, введите Ваше сообщение...",
+            "enter_amount": "Введите количество...",
+            "enter_transaction_id": "Введите идентификатор транзакции...",
+            "enter_recipient_address": "Введите адрес получателя...",
+            "cannot_fetch_tickets":
+                "Извините, мы не можем получить список Ваших обращений в данный момент. Пожалуйста, обновите страницу или попробуйте позже.",
+            "cannot_fetch_comments":
+                "Извините, мы не можем получить список Ваших комментариев к обращениям в данный момент. Пожалуйста, обновите страницу или попробуйте позже.",
+            "cannot_reply_ticket":
+                "Возникла проблема при создании ответа на обращение. Пожалуйста, обновите страницу или попробуйте позже.",
+            "cannot_close_ticket":
+                "Возникла проблема при закрытии обращения. Пожалуйста, обновите страницу или попробуйте позже.",
+            "cannot_create_ticket":
+                "Возникла проблема при создании обращения. Пожалуйста, обновите страницу или попробуйте позже.",
+            "amount": "Количество",
+            "message": "Сообщение",
+            "transaction_id": "Идентификатор транзакци",
+            "recipient_address": "Адрес получателя",
+            "issue": "Проблема",
+            "issues_label": "В чем Ваша проблема?",
+            "issues_please_select": "Пожалуйста, выберите тип проблемы...",
+            "processing_please_wait": "Обрабока. Пожалуйста, подождите...",
+            "saving_reply_please_wait":
+                "Сохранение ответа. Пожалуйста, подождите...",
+            "incomplete_form_fields": "Пожалуйста введите все поля",
+            "intro_title": "Техподдержка CryptoBridge",
+            "intro_text":
+                "Если у Вас возникла проблема с депозитом или выводом, пожалуйста, создайте обращение"
         }
     }
 }
