Added htlc virtual ops in account activity

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1501,7 +1501,11 @@
         "witness_pay": "Withdrew witness pay to account",
         "witness_receive": "Received witness from witness",
         "witness_update": "{account} update its witness info",
-        "worker_create": "{account} created a worker proposal with daily pay of {pay}"
+        "worker_create": "{account} created a worker proposal with daily pay of {pay}",
+        "htlc_create":"{from} locked {amount} for {to} to claim until {lock_period}",
+        "htlc_redeem":"{redeemer} claimed to redeem HTLC",
+        "htlc_redeemed":"{to} redeemed {amount} from HTLC created by {from}",
+        "htlc_extend":"{update_issuer} added {seconds_to_add} seconds to claim period"
     },
     "page404": {
         "asset_not_found_subtitle": "That asset does not exist",
@@ -2110,7 +2114,11 @@
             "witness_create": "Create witness",
             "witness_update": "Update witness",
             "witness_withdraw_pay": "Witness pay withdrawal",
-            "worker_create": "Create worker"
+            "worker_create": "Create worker",
+            "htlc_create":"HTLC create",
+            "htlc_redeem":"HTLC redeem",
+            "htlc_redeemed":"HTLC redeemed",
+            "htlc_extend":"HTLC extend"
         },
         "vesting_balance_create": "created vesting balance of",
         "waiting": "Waiting for confirmation..",
