--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1502,11 +1502,11 @@
         "witness_receive": "Received witness from witness",
         "witness_update": "{account} update its witness info",
         "worker_create": "{account} created a worker proposal with daily pay of {pay}",
-        "htlc_create":"{from} locked {amount} for {to} to claim until {lock_period}",
-        "htlc_redeem":"{redeemer} request to redeem {amount} from HTLC {htlc_id}",
-        "htlc_redeemed":"{to} redeemed HTLC {htlc_id} of {from}",
-        "htlc_extend":"{update_issuer} added {seconds_to_add} seconds to claim period of HTLC {htlc_id}",
-        "htlc_refund":"{to} got refund of HTLC {htlc_id}"
+        "htlc_create": "{from} locked {amount} for {to} to claim until {lock_period}",
+        "htlc_redeem": "{redeemer} request to redeem {amount} from HTLC {htlc_id}",
+        "htlc_redeemed": "{to} redeemed HTLC {htlc_id} of {from}",
+        "htlc_extend": "{update_issuer} added {seconds_to_add} seconds to claim period of HTLC {htlc_id}",
+        "htlc_refund": "{to} got refund of HTLC {htlc_id}"
     },
     "page404": {
         "asset_not_found_subtitle": "That asset does not exist",
@@ -2116,11 +2116,11 @@
             "witness_update": "Update witness",
             "witness_withdraw_pay": "Witness pay withdrawal",
             "worker_create": "Create worker",
-            "htlc_create":"HTLC create",
-            "htlc_redeem":"HTLC redeem",
-            "htlc_redeemed":"HTLC redeemed",
-            "htlc_extend":"HTLC extend",
-            "htlc_refund":"HTLC refund"
+            "htlc_create": "HTLC create",
+            "htlc_redeem": "HTLC redeem",
+            "htlc_redeemed": "HTLC redeemed",
+            "htlc_extend": "HTLC extend",
+            "htlc_refund": "HTLC refund"
         },
         "vesting_balance_create": "created vesting balance of",
         "waiting": "Waiting for confirmation..",
@@ -2441,5 +2441,14 @@
         "wallet_model_3": "<li>Multiple accounts</li><li>Wallet file backup required</li><li>High security</li>",
         "wallet_move": "This backup file can also be used to move your local wallet to different computers or different browsers. In order to restore your local wallet using this backup <strong>you will also need your password!</strong>",
         "wallet_password": "Login anywhere using your password"
+    },
+    "htlc": {
+        "claim_period": "Seconds to claim",
+        "claim_period_due": "Claimable until",
+        "preimage_hash": "Preimage hash",
+        "id": "HTLC id",
+        "update_issuer" : "Update issuer",
+        "seconds_to_add" : "Add seconds to claim period",
+        "redeemer": "Redeemer"
     }
 }
