#2602. add additional info block

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1405,7 +1405,9 @@
         "settle": {
             "amount": "Amount to settle",
             "submit": "Settle asset",
-            "title": "Request settlement of %(asset)s"
+            "title": "Request settlement of %(asset)s",
+            "max_volume": "Max. settlement volume: %(amount)s %(asset)s",
+            "remaining_volume": "Remaining settleable volume: %(amount)s %(asset)s"
         },
         "withdraw": {
             "address": "Withdraw to Address",
