refine visualization calc_block_time can now estimate
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1502,10 +1502,10 @@
         "witness_receive": "Received witness from witness",
         "witness_update": "{account} update its witness info",
         "worker_create": "{account} created a worker proposal with daily pay of {pay}",
-        "htlc_create": "{from} locked {amount} for {to} to claim until {lock_period}",
+        "htlc_create": "{from} locked {amount} for {to} to redeem until {lock_period}",
         "htlc_redeem": "{redeemer} request to redeem from HTLC {htlc_id}",
         "htlc_redeemed": "{to} redeemed {amount} from HTLC {htlc_id} of {from}",
-        "htlc_extend": "{update_issuer} added {seconds_to_add} seconds to claim period of HTLC {htlc_id}",
+        "htlc_extend": "{update_issuer} added {seconds_to_add} seconds to redeem period of HTLC {htlc_id}",
         "htlc_refund": "{to} got refund of HTLC {htlc_id}"
     },
     "page404": {
@@ -2447,8 +2447,11 @@
         "claim_period_due": "Claimable until",
         "preimage_hash": "Preimage hash",
         "id": "HTLC id",
-        "update_issuer" : "Update issuer",
-        "seconds_to_add" : "Add seconds to claim period",
-        "redeemer": "Redeemer"
+        "update_issuer": "Update issuer",
+        "seconds_to_add": "Add seconds to claim period",
+        "redeemer": "Redeemer",
+        "preimage": "Preimage",
+        "preimage_explanation": "The secret preimage was used to calculate the preimage hash and is required to redeem this HTLC",
+        "preimage_hash_explanation": "The preimage hash is calculated from the secret preimage and is imperative to HTLCs. With the secret preimage the HTLC can be redeemed."
     }
 }
