--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2046,6 +2046,9 @@
             "_none": "Free of Charge",
             "basic_fee": "Basic Fee",
             "fee": "Regular Transaction Fee",
+            "fee_per_day": "Price per day",
+            "fee_per_kb": "Price per KByte Transaction Size",
+            "price_per_output": "Price per recipient",
             "long_symbol": "Longer Symbols",
             "membership_annual_fee": "Annual Membership",
             "membership_lifetime_fee": "Lifetime Membership",
