--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1480,9 +1480,9 @@
         "asset_global_settle": "{account} requested global settlement of {asset} at {price}",
         "asset_issue": "{account} issued {amount} to {to}",
         "asset_reserve": "{account} burned (reserved) {amount}",
-        "asset_settle": "{account} requested settlement of {amount}",
+        "asset_settle": "{account} requested settlement of {amount}. Estimated delay: {delay} hours",
         "asset_settle_cancel": "{account} cancelled settlement of {amount}",
-        "asset_settle_instant": "{account} settled {amount} instantly at {price}",
+        "asset_settle_instant": "{account} settled {amount} instantly at {price}. Estimated delay: {delay} hours",
         "asset_update": "{account} updated the asset {asset}",
         "asset_update_feed_producers": "{account} updated the feed producers for the asset {asset}",
         "asset_update_issuer": "{from_account} transferred {asset} to {to_account}",
