Added "Group by asset" selector and appropriate grouping logic.

--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -38,6 +38,7 @@
         "existing_user": "Existierender Benutzer",
         "filter_orders": "Filter",
         "follow": "Kontakt hinzufügen",
+        "group_by_asset": "Group by asset",
         "hidden_accounts_row": "Versteckte Konten",
         "hide_hidden": "Aktiv",
         "hide_ignored": "Blende versteckte Konten aus",
