--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -38,6 +38,7 @@
         "existing_user": "Existing user",
         "filter_orders": "Filter...",
         "follow": "Add contact",
+        "group_by_asset": "Group by asset",
         "hidden_accounts_row": "Hidden Accounts",
         "hide_hidden": "Active",
         "hide_ignored": "Hide hidden accounts",
