--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -38,6 +38,7 @@
         "existing_user": "Utente esistente",
         "filter_orders": "Filter",
         "follow": "Aggiungi contatto",
+        "group_by_asset": "Group by asset",
         "hidden_accounts_row": "Hidden Accounts",
         "hide_hidden": "Attivi",
         "hide_ignored": "Nascondi account nascosti",
