--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -38,6 +38,7 @@
         "existing_user": "既存ユーザー",
         "filter_orders": "フィルター",
         "follow": "フォロー",
+        "group_by_asset": "Group by asset",
         "hidden_accounts_row": "非表示のアカウント",
         "hide_hidden": "非表示のアセットを隠す",
         "hide_ignored": "非表示のアカウントを隠す",
