--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -38,6 +38,7 @@
         "existing_user": "老用户",
         "filter_orders": "筛选",
         "follow": "添加联系人",
+        "group_by_asset": "Group by asset",
         "hidden_accounts_row": "隐藏的账户",
         "hide_hidden": "显示",
         "hide_ignored": "隐藏已忽略账户",
