--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -38,6 +38,7 @@
         "existing_user": "Usuario existente",
         "filter_orders": "Filter",
         "follow": "Agregar contacto",
+        "group_by_asset": "Group by asset",
         "hidden_accounts_row": "Hidden Accounts",
         "hide_hidden": "Active",
         "hide_ignored": "Ocultar cuentas ocultas",
