--- a/app/assets/locales/locale-fr.json
+++ b/app/assets/locales/locale-fr.json
@@ -38,6 +38,7 @@
         "existing_user": "Existing user",
         "filter_orders": "Filter",
         "follow": "Ajouter le contact",
+        "group_by_asset": "Group by asset",
         "hidden_accounts_row": "Hidden Accounts",
         "hide_hidden": "Active",
         "hide_ignored": "Hide hidden accounts",
