--- a/app/assets/locales/locale-tr.json
+++ b/app/assets/locales/locale-tr.json
@@ -38,6 +38,7 @@
         "existing_user": "Existing user",
         "filter_orders": "Filter",
         "follow": "Kişi ekle",
+        "group_by_asset": "Group by asset",
         "hidden_accounts_row": "Hidden Accounts",
         "hide_hidden": "Gizle",
         "hide_ignored": "Gizle",
