Added titles to number-only columns.

--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -6,6 +6,7 @@
         "as_collateral": "Sicherheit",
         "asset": "Anlage",
         "asset_details": "Anlage Details",
+        "average_price": "Average price",
         "bittrex_scam": "Achtung, dies ist ein Betrügerkonto, das echte Bittrex-Konto heißt: bittrex-deposit!",
         "bts_market": "Markt",
         "collaterals": "Sicherheits-Positionen",
