--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -6,6 +6,7 @@
         "as_collateral": "Collateral",
         "asset": "Activo",
         "asset_details": "Detalles de activos",
+        "average_price": "Average price",
         "bittrex_scam": "Esta cuenta no es la verdadera cuenta de Bittrex, por favor envíe a esta cuenta: bittrex-deposit.",
         "bts_market": "Mercado",
         "collaterals": "Posiciones Collaterales",
