--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -6,6 +6,7 @@
         "as_collateral": "Garanzia",
         "asset": "Asset",
         "asset_details": "Dettagli asset",
+        "average_price": "Average price",
         "bittrex_scam": "Questo non è il vero account Bittrex, per favore invia al seguente account: bittrex-deposit.",
         "bts_market": "Mercato",
         "collaterals": "Posizioni con margine",
