--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -6,6 +6,7 @@
         "as_collateral": "担保",
         "asset": "アセット",
         "asset_details": "アセット詳細",
+        "average_price": "Average price",
         "bittrex_scam": "このアカウントは実際のBittrexアカウントではありません。このアカウントに送信してください: bittrex-deposit",
         "bts_market": "マーケット",
         "collaterals": "マージンポジション",
