--- a/app/assets/locales/locale-ko.json
+++ b/app/assets/locales/locale-ko.json
@@ -6,6 +6,7 @@
         "as_collateral": "Collateral",
         "asset": "자산",
         "asset_details": "Asset details",
+        "average_price": "Average price",
         "bittrex_scam": "This account is not the real Bittrex account, please send to this account: bittrex-deposit.",
         "bts_market": "종목",
         "collaterals": "보증금 포지션",
