--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -6,6 +6,7 @@
         "as_collateral": "Обеспечение",
         "asset": "Актив",
         "asset_details": "Детали актива",
+        "average_price": "Средняя цена",
         "bittrex_scam": "Этот аккаунт не является реальным аккаунтом Bittrex, пожалуйста, отправьте на этот аккаунт: bittrex-deposit.",
         "bts_market": "Рынок",
         "collaterals": "Маржинальные позиции",
