--- a/app/assets/locales/locale-tr.json
+++ b/app/assets/locales/locale-tr.json
@@ -6,6 +6,7 @@
         "as_collateral": "Teminat",
         "asset": "Dijital Varlık",
         "asset_details": "Aktif detayları",
+        "average_price": "Average price",
         "bittrex_scam": "Bu adres Bittrex'in gerçek adresi değildir. Lütfen alıcıyı bittrex-deposit olarak değiştirin.",
         "bts_market": "Piyasa",
         "collaterals": "Teminat Pozisyonları",
