--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -6,6 +6,7 @@
         "as_collateral": "抵押物",
         "asset": "资产",
         "asset_details": "资产详情",
+        "average_price": "Average price",
         "bittrex_scam": "注意：这个账户不是交易所 Bittrex 的存款账户，请发送至 bittrex-deposit。",
         "bts_market": "市场",
         "collaterals": "抵押债仓",
