--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -6,6 +6,7 @@
         "as_collateral": "Collateral",
         "asset": "Asset",
         "asset_details": "Asset details",
+        "average_price": "Average price",
         "bittrex_scam": "This account is not the real Bittrex account, please send to this account: bittrex-deposit.",
         "bts_market": "Market",
         "collaterals": "Margin Positions",
