- cleanup of preimage props - cache for modal through FetchChainObjects
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1901,7 +1901,7 @@
             "hash": "Hash",
             "preimage_has_been_created": "A random preimage has been created and filled in automatically below",
             "preimage": "Preimage",
-            "preimage_secret_button": "Enter secret preimage",
+            "enter_secret_preimage": "Enter secret preimage",
             "sender": "Sender",
             "size": "Size",
             "recipient": "Recipient",
@@ -1910,6 +1910,7 @@
                 "preimage_input": "Field requires a secret preimage",
                 "preimage_button": "Please click to enter secret preimage",
                 "new_random": "Roll the dice and create a new random string.",
+                "enter_preimage": "Enter the secret preimage that you have obtained from the sender",
                 "preimage_random": "The best choice for the secret is a random string. If your secret can be guessed or is too short, you risk losing your funds. Use the copy button in this row to save the Preimage and hashing algorithm.",
                 "preimage_hash": "The Preimage hash is calculated from the above Preimage using the indicated hashing algorithm. Use the copy button in this row to save the Preimage hash and Preimage size.",
                 "preimage_size": "The Preimage size is the length of the above Preimage. This value will also be written to the chain. Use the copy button in this row to save the Preimage hash and Preimage size."
